# DVDBounce

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  c.sh  conan.sh  conanfile.txt  config.conf  dvdbounce.cpp  test.cpp  test.h.in
conan/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
src/: config.cpp  config.h  logo.cpp  logo.h  main.cpp  main.h  util.cpp  util.h
